--- a/.github/workflows/mavenPush.yml
+++ b/.github/workflows/mavenPush.yml
@@ -42,9 +42,6 @@ jobs:
       - name: Installing packer provisioners
         working-directory: packer_tmp
         run: packer init aws-debian.pkr.hcl
-      - name: Formatting Packer file
+      - name: Building Packer
         working-directory: packer_tmp
-        run: packer fmt -check aws-debian.pkr.hcl
-      - name: Validating Packer file
-        working-directory: packer_tmp
-        run: packer validate aws-debian.pkr.hcl
+        run: packer build aws-debian.pkr.hcl
