--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -68,6 +68,11 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>com.timgroup</groupId>
+            <artifactId>java-statsd-client</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.networknt</groupId>
             <artifactId>json-schema-validator</artifactId>
             <version>1.0.83</version>
