Adding statsd to application

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.datasource.hikari.connection-timeout=2000
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 env.domain=localhost
+env.port=8125
 
 logging.level.org.springframework=debug
