--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -8,5 +8,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 env.domain=localhost
 env.port=8125
+sns.topic.arn=arn:aws:sns:us-east-1:458264565990:my-topic-b9a8adb
+AWS_SECRET_ACCESS_KEY=z0PMsEXUufRWu2jGnw0SWkpTguxsIruE74DI0iGt
+AWS_ACCESS_KEY_ID=AKIAWVMVSLDTCLEP377Z
 
 logging.level.org.springframework=debug
