--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -31,6 +31,11 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-sns</artifactId>
+            <version>1.12.584</version>
+        </dependency>
+        <dependency>
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>5.5.2</version> <!-- Use the latest version -->
